WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261021
LibWebRTCSocket does no longer need to check for buffered data size
https://bugs.webkit.org/show_bug.cgi?id=261021
Summary
LibWebRTCSocket does no longer need to check for buffered data size
youenn fablet
Reported
2023-09-01 00:41:58 PDT
LibWebRTCSocket does no longer need to check for buffered data size
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-01 00:42:12 PDT
<
rdar://problem/114810113
>
youenn fablet
Comment 2
2023-09-01 00:46:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17334
EWS
Comment 3
2023-09-05 10:25:17 PDT
Committed
267634@main
(2f1c609b53d2): <
https://commits.webkit.org/267634@main
> Reviewed commits have been landed. Closing PR #17334 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug