LibWebRTCSocket does no longer need to check for buffered data size https://bugs.webkit.org/show_bug.cgi?id=261021 rdar://problem/114810113

Reviewed by Jean-Yves Avenard.

We used to check for buffered size to prevent excessive memory allocation in case the main thread is blocked.
We no longer need to do this since we are doing IPC straight from the networking thread.
The backpressure mechanism (via nw callback and libwebrtc SignalSentPacket) should be sufficient.
This might reduce a case where we would loose some UDP packets if there is a burst of packet sending on libwebrtc side and a slowdown in nw or network process.

* Source/WebKit/WebProcess/Network/webrtc/LibWebRTCSocket.cpp:
(WebKit::LibWebRTCSocket::signalSentPacket):
(WebKit::LibWebRTCSocket::SendTo):
(WebKit::LibWebRTCSocket::willSend): Deleted.
* Source/WebKit/WebProcess/Network/webrtc/LibWebRTCSocket.h:

Canonical link: https://commits.webkit.org/267634@main